[package]
name = "pomodoro-rs"
version = "0.1.0"
authors = ["Arsene Rei"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.11.0"
termion = "1.0.0"
structopt = "0.3"

[[bin]]
name = "pomodoro"
path = "src/main.rs"
